@@ -1,3 +1,9 @@
+2006-12-12  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-ringschart.c (baobab_ringschart_motion_notify):
+	simplify logic and fix drawing problem of the central circle
+	when crossing the x axis.
+
 2006-11-05 Alejandro G. Castro <acastro@igalia.com>
 
 	* src/baobab-ringschart.c: Changed all the M_PI constants for
